[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Characters/Enemies/boss-cocodaemon/Cacodaemon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/littleCocoDE.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/Socapex - Evol Online SFX - Punches and hits/Socapex - Evol Online SFX - Punches and hits/Socapex - new_hits_2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Sounds/Socapex - Evol Online SFX - Punches and hits/Socapex - Evol Online SFX - Punches and hits/Socapex - new_hits_8.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=22]
resource_name = "little-attack"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.75, 6.25 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 20.5, 16 )

[node name="LittleCocoDE" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 144
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 21 )
anims/little-attack = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="DeadArea" type="Area2D" parent="." groups=["Enemies"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 0.5, 2 )
shape = SubResource( 20 )

[node name="DamageSwordSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DamageSwordSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
